javaee-app-lg-sample/src/main/aks/appgw-cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_INGRESS}
  namespace: ${APPLICATION_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ${APPLICATION_NAME}
              port:
                number: 9080
